--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -6,7 +6,6 @@
   justify-items: center;
   align-items: center;
   margin-top: -3rem;
-  padding: 5rem 5rem;
   background-color: $darker-blue;
   color: $white;
 
@@ -97,7 +96,7 @@
     grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 10rem;
+    column-gap: 1rem;
     justify-items: start;
 
     @media (min-width: $breakpoint-desktop) {
@@ -140,8 +139,15 @@
   &__social {
     grid-row: 3 / 4;
     grid-column: 1 / 2;
+    justify-items: center;
+    text-align: center;
     svg {
-      margin: 0.5rem;
+      margin: 1rem;
+      width: 2rem;
+      height: 2rem;
+      @media (min-width: $breakpoint-desktop) {
+        margin: 0.5rem;
+      }
       & path:hover {
         fill: $bright-red;
       }
